<resources>
    <string name="app_name">OrderFoodAppsCH3</string>
    <string name="text_search">Maybe you need something sweet?</string>
    <string name="tv_ricenoodle"><![CDATA[Rice & \nNoodle]]></string>
    <string name="greetings">Welcome back</string>
    <string name="username">Nisa !</string>
    <string name="nearby">Nearby</string>
    <string name="fastfood">Fast \nfood</string>
    <string name="drink">Drink</string>
    <string name="rating_menu_1">4.8</string>
    <string name="name_menu_1">Pizza Paperoni</string>
    <string name="description_menu_1">300 papperoni + onion + lettuce</string>
    <string name="price_menu_1">Rp 26.000</string>
    <string name="rating_menu_2">4.8</string>
    <string name="name_menu_2">Cheese burger</string>
    <string name="description_menu_2">200gr beef + cheese \nLettuce + tomato</string>
    <string name="price_menu_2">$22.00</string>
    <string name="name_menu_3">Chicken Rougat</string>
    <string name="description_menu_3">chicken + mushrooms + pastry</string>
    <string name="price_menu_3">$59.00</string>
    <string name="name_menu_4">Risol Kampung</string>
    <string name="description_menu_4">Smoked beef + boiled \neggs + mayonaise</string>
    <string name="price_menu_4">89.00</string>
    <string name="desc_menu_detail_1">Shrimps, squid rings, clams and mushroom on a bed of Pesto sauce, topped with Mozzarella cheese and basil</string>
    <string name="name_menu_detail_1">Pizza Hut Seafood</string>
    <string name="price_menu_detail_1">Rp 22.000</string>
    <string name="tv_location_menu_detail_1">Location</string>
    <string name="tv_info_location_menu_detail_1">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="tagline_bg">Healthy\nFood \nFor Today</string>
    <string name="pick_for_you">Pick For You</string>
    <string name="banner_image">Banner Image</string>
    <string name="img_ic_chart">Image Icon Chart</string>
    <string name="img_ic_search">Image Icon Search</string>
    <string name="img_ic_profile">Image Icon Profile</string>
    <string name="img_ic_nearby">Image Icon Nearby</string>
    <string name="img_ic_rice_noodle">Image Icon Rice Noodle</string>
    <string name="img_ic_fast_food">Image Icon Fast Food</string>
    <string name="img_ic_drink">Image Icon Drink</string>
    <string name="count_item">1</string>
    <string name="add_btn">Add</string>
    <string name="rp">Rp</string>
    <string name="add_rp">Add - Rp</string>
</resources>